# ai-gif-skill

./: .gitignore  README.md
docs/superpowers/plans/: 2026-04-07-ai-gif-skill.md  2026-04-08-ai-gif-skill-v2.md
docs/superpowers/specs/: 2026-04-07-ai-gif-skill-design.md  2026-04-08-ai-gif-skill-v2-design.md
skills/ai-gif-skill/: SKILL.md  pyproject.toml
skills/ai-gif-skill/agents/: openai.yaml
skills/ai-gif-skill/references/: cli-contract.md
skills/ai-gif-skill/scripts/: assemble_gif.py  assemble_gif_from_frames.py  cutout_frames.py  cutout_with_rembg.py  extract_frames.py  generate_image.py  generate_video.py  generate_with_gemini.py  template_sheet.py
skills/ai-gif-skill/src/ai_gif_skill/: __init__.py  cli.py  cutout.py  frames.py  generate.py  gif.py  layout_metadata.py  pipelines.py  template.py  video.py
skills/ai-gif-skill/src/ai_gif_skill/providers/: __init__.py  base.py  gemini_image.py  gemini_video.py  grok_image.py  grok_video.py
tests/: test_cli.py  test_cutout.py  test_frames.py  test_generate.py  test_gif.py  test_grok_image.py  test_grok_video.py  test_pipelines.py  test_prompting.py  test_repo_layout.py  test_template.py  test_video.py
